# structurefrommotion

./: CMakeLists.txt  README.md
brisk/: CMakeLists.txt
brisk/include/brisk/: brisk.h
data/: IMG_2674.sift  IMG_2675.sift
examples/: MatchImagesInDirectoryBRISK.wsx  MatchImagesInDirectorySIFT.wsx  PointCloudMeshing.wsx  imagematching.wsx  imagematching_sift.wsx
src/: briskdetection.cpp  briskdetection.h  calibratecamera.cpp  calibratecamera.h  filesindirectory.cpp  filesindirectory.h  matchfeatures.cpp  matchfeatures.h  siftdetection.cpp  siftdetection.h  structurefrommotionplugin.cpp  structurefrommotionplugin.h  structurefrommotionplugin_api.h  wsmat.cpp  wsmat.h
